added css notes

--- a/headings.html
+++ b/headings.html
@@ -96,5 +96,36 @@ To resolve a merge conflict, simply locally remove all lines and code that are n
 
 </table>
 
+<h1>CSS</h1>
+<h4>CSS (Cascading Style Sheets) is a language used to interact with and style HTML, changing the way it looks according to a series of rules. CSS is what makes websites look nice.
+CSS can be applied to HTML in a variety of ways:</br>
+The style attribute: <h5 style="color:blue;text-align:center;"></h5></br>
+The semicolon-separated CSS properties passed to style will be applied to whatever the tag containts.
+The <style></style> tags: ```html
+``` - This is a useful paradigm to use when reusing the same styling many times throughout a page. The properties listed will apply to all of the tags that are listed. </br>
+
+A separate .css file: add <link rel="stylesheet" href="path/to/styles.css"> to the header, and move the CSS code (same format as used inside the <style></style> tags.
+This is often an even better paradigm because it separates two distinctly different things: structure (HTML) and style (CSS), while also being easier to manage and read.</h4>
+
+<table>
+    <tr>
+        <th>Command</th>
+        <th>Description</th>
+    </tr>
+    <tr>
+        <td>cd</td>
+        <td>change direcitories</td>
+    </tr>
+    <tr>
+        <td>touch</td>
+        <td>create new document inside of a director</td>
+
+    </tr>
+    <tr>
+        <td>git clone (url)</td>
+        <td>take a repository stored on a server (like GitHub) and downloads it</td>
+    </tr>
+</table>
+
     </body>
 </html>
