added code tags to css notes

--- a/headings2.html
+++ b/headings2.html
@@ -38,6 +38,11 @@
     th {
         background-color: lightgray;
     }
+
+    code {
+      background-color:#ffffff;
+    }
+
 </style>
 
 
@@ -236,8 +241,8 @@ Some common CSS selectors:</h3>
 
 </br>
 </br>
-A ‘pseudoelement’ is a way to affect certain parts of an HTML element. In this example, the <code>before</code> selector applies <code>content</code> with its included styling before the contents of all <code>a</code> elements.
-<code>\21d2</code> is a hexadecimal value for a Unicode icon, which can represent symbols like emoji.
+<h3>A ‘pseudoelement’ is a way to affect certain parts of an HTML element. In this example, the <code>before</code> selector applies <code>content</code> with its included styling before the contents of all <code>a</code> elements.
+<code>\21d2</code> is a hexadecimal value for a Unicode icon, which can represent symbols like emoji.</h3>
 
 <p>Select all <code>selection</code> pseudoelements of the element <code>p</code></p>
 
